--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
-# IDE files
+# User Defined
 .idea/
 *~
+*.cgi
+temp0_raw
 
-# Document files
-*.docx
-*.pdf
+## Executables
+acquire
+avgadc
+clockprog
+coincdaq
+findsettings
+gettraces
+pollcsr
+progfippi
+runstats
+startdaq
 
-# Data files
+## Data files
 *.csv
 *.b00
 *.dat
@@ -15,28 +25,75 @@
 *.bit
 *_raw
 
-# Project specific programs
-progfippi
-acquire
-findsettings
-
 # Prerequisites
 *.d
 
-# Compiled Object files
-*.slo
-*.lo
+# Object files
 *.o
+*.ko
 *.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
 
 # Precompiled Headers
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
 *.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+# CMake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+cmake-build-*/
+
+# C++
+# Compiled Object files
+*.slo
 
 # Fortran module files
 *.mod
@@ -44,11 +101,3 @@ findsettings
 
 # Compiled Static libraries
 *.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
