forcing build on Bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ matrix:
 #      env:
 #        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 #        - BUILD_OPTIONS=""
-    - os: linux
+    - os: bionic
       addons:
         apt:
           sources:
