--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: bionic
+
 notifications:
   email:
     on_success: change
@@ -43,7 +45,7 @@ matrix:
 #      env:
 #        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 #        - BUILD_OPTIONS=""
-    - os: bionic
+    - os: linux
       addons:
         apt:
           sources:
