Updating all the hard coded paths to point to the right places

--- a/src/cgi/CMakeLists.txt
+++ b/src/cgi/CMakeLists.txt
@@ -1,12 +1,14 @@
+set(INSTALL_PATH web/cgi)
+
 add_executable(cgitraces.cgi cgitraces.c)
-install(TARGETS cgitraces.cgi DESTINATION cgi)
+install(TARGETS cgitraces.cgi DESTINATION ${INSTALL_PATH})
 
 FOREACH (prog cgistats cgiwaveforms)
     add_executable(${prog}.cgi ${prog}.c)
     target_link_libraries(${prog}.cgi PixieNetCommon_STATIC)
-    install(TARGETS ${prog}.cgi DESTINATION cgi)
+    install(TARGETS ${prog}.cgi DESTINATION ${INSTALL_PATH})
 ENDFOREACH (prog)
 
 add_executable(cgiavgtraces.cgi cgiavgtraces.c)
 target_link_libraries(cgiavgtraces.cgi PixieNetConfig_STATIC)
-install(TARGETS cgiavgtraces.cgi DESTINATION cgi)
+install(TARGETS cgiavgtraces.cgi DESTINATION ${INSTALL_PATH})
