Updating runstats.c to combine with the cgi file.

--- a/src/cgi/CMakeLists.txt
+++ b/src/cgi/CMakeLists.txt
@@ -1,10 +1,8 @@
 set(INSTALL_PATH assets/cgi)
 
-FOREACH (prog cgistats cgiwaveforms)
-    add_executable(${prog}.cgi ${prog}.c)
-    target_link_libraries(${prog}.cgi PixieNetCommon_STATIC)
-    install(TARGETS ${prog}.cgi DESTINATION ${INSTALL_PATH})
-ENDFOREACH (prog)
+add_executable(cgiwaveforms.cgi cgiwaveforms.c)
+target_link_libraries(cgiwaveforms.cgi PixieNetCommon_STATIC)
+install(TARGETS cgiwaveforms.cgi DESTINATION ${INSTALL_PATH})
 
 add_executable(cgiavgtraces.cgi cgiavgtraces.c)
 target_link_libraries(cgiavgtraces.cgi PixieNetConfig_STATIC)
