Adding NetDAQ to tracking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,11 +35,16 @@ endif (CMAKE_BUILD_TYPE MATCHES "Debug")
 
 include(CMakeDependentOption)
 option(BUILD_TESTS "Builds programs designed to test the package. Including UnitTest++ test." OFF)
-option(USE_KAFKA "Builds acquire with Kafka support" OFF)
+option(USE_KAFKA "Builds acquire with Kafka support" ON)
+option(USE_NETDAQ "Builds network connected DAQ" ON)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 find_package(Threads REQUIRED)
-find_package(Boost 1.65.1 REQUIRED COMPONENTS date_time chrono atomic program_options system thread)
+find_package(Boost 1.65.1 REQUIRED COMPONENTS date_time chrono atomic program_options system thread log)
+
+if(USE_NETDAQ)
+    find_package(ZeroMQ REQUIRED)
+endif(USE_NETDAQ)
 
 if (USE_KAFKA)
     find_package(LibRDKafka 0.11.0 REQUIRED)
