--- a/src/utilities/CMakeLists.txt
+++ b/src/utilities/CMakeLists.txt
@@ -32,3 +32,10 @@ if (USE_KAFKA)
 endif (USE_KAFKA)
 target_link_libraries(acquire PixieNetCommon_STATIC PixieNetConfig_STATIC m ${BOOST_ACQ_LIBS} ${KAFKA_LIBS})
 install(TARGETS acquire DESTINATION bin)
+
+if (USE_NETDAQ)
+    set(NETDAQ_BOOST_LIBS boost_log)
+    add_executable(netdaq log.c netdaq.c nts.c)
+    target_link_libraries(netdaq PixieNetCommon_STATIC PixieNetConfig_STATIC ${NETDAQ_BOOST_LIBS} zmq)
+    install(TARGETS netdaq DESTINATION bin)
+endif(USE_NETDAQ)
