Adding web assets to installation with CMAKE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ endif ()
 # If user does not specify prefix we assign it to the project root directory
 if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     message(STATUS "Install Prefix not specified.")
-    get_filename_component(INSTALL_DIR ${PROJECT_SOURCE_DIR} REALPATH)
+    get_filename_component(INSTALL_DIR ${PROJECT_SOURCE_DIR}/install REALPATH)
     set(CMAKE_INSTALL_PREFIX ${INSTALL_DIR} CACHE PATH "Install Prefix" FORCE)
 endif ()
 message(STATUS "Installing to ${CMAKE_INSTALL_PREFIX}")
@@ -42,9 +42,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 find_package(Threads REQUIRED)
 find_package(Boost 1.65.1 REQUIRED COMPONENTS date_time chrono atomic program_options system thread log)
 
-if(USE_NETDAQ)
+if (USE_NETDAQ)
     find_package(ZeroMQ REQUIRED)
-endif(USE_NETDAQ)
+endif (USE_NETDAQ)
 
 if (USE_KAFKA)
     find_package(LibRDKafka 0.11.0 REQUIRED)
@@ -60,3 +60,10 @@ endif (BUILD_TESTS)
 
 include_directories(include)
 add_subdirectory(src)
+
+install(DIRECTORY css DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(DIRECTORY fonts DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(DIRECTORY html DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(DIRECTORY images DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(DIRECTORY js DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(FILES index.html DESTINATION ${CMAKE_INSTALL_PREFIX})
